[gd_scene load_steps=6 format=3 uid="uid://c7w0s2hx2atic"]

[ext_resource type="Script" uid="uid://cv0usdvnswltr" path="res://Main/HUD/hud.gd" id="1_g6jb3"]
[ext_resource type="PackedScene" uid="uid://bpe04jrep5o6u" path="res://Debug/Debug.tscn" id="2_d4cuy"]
[ext_resource type="Theme" uid="uid://bsrmoxwfdthtj" path="res://resources/Themes/gca_theme.tres" id="2_ijiei"]
[ext_resource type="Texture2D" uid="uid://cx1un4l5wiyk0" path="res://resources/Assets/chip.png" id="3_yvalu"]

[sub_resource type="LabelSettings" id="LabelSettings_ppp2q"]
font_size = 32
font_color = Color(0.580392, 0.215686, 1, 1)
shadow_size = 3
shadow_color = Color(1, 1, 1, 1)
shadow_offset = Vector2(0, 0)

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6jb3")

[node name="StateButton" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -24.0
offset_right = 22.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ijiei")
theme_override_font_sizes/font_size = 20
text = "10/10"

[node name="DustContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 13.0
offset_right = 43.0
offset_bottom = 58.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="DustContainer"]
layout_mode = 2
texture = ExtResource("3_yvalu")
expand_mode = 2

[node name="DustText" type="Label" parent="DustContainer"]
layout_mode = 2
text = "50"
label_settings = SubResource("LabelSettings_ppp2q")

[node name="DebugButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Debug
"

[node name="Debug" parent="." instance=ExtResource("2_d4cuy")]
visible = false

[connection signal="toggled" from="StateButton" to="." method="_on_state_button_toggled"]
[connection signal="pressed" from="DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="toggled" from="DebugButton" to="." method="_on_debug_button_toggled"]
